# aexlo

./: .editorconfig  .gitignore  AGENTS.md  ANALYSIS.md  Cargo.toml  GEMINI.md  LICENSE  README.md
.github/: copilot-instructions.md
aexlo/: Cargo.toml  build.rs
aexlo-macros/: Cargo.toml
aexlo-macros/src/: lib.rs
aexlo/src/: ansi.rs  diagnostics.rs  error.rs  gpu.rs  instance.rs  interact_callbacks.rs  lib.rs  plugin_instance.rs  preview.rs  utils.rs
aexlo/src/core/: diagnostics.rs  error.rs  helpers.rs  instance.rs  mod.rs  smart_render.rs  wrappers.rs
aexlo/src/host/: interact.rs  mod.rs  params.rs  smart_render.rs  utility.rs
aexlo/src/host/smart_render/: callbacks.rs  data.rs  mod.rs  pre_render.rs  render.rs
aexlo/src/suites/: ae_app.rs  angle_param.rs  ansi.rs  effect_ui.rs  gpu_device.rs  handle.rs  interface.rs  iterate.rs  iterate_8.rs  macros.rs  mod.rs  param_utils.rs  persistent_data.rs  registry.rs  transform.rs  ui.rs  utility.rs  world.rs  world_transform.rs
aexlo/src/suites/factories/: handle_suite.rs  interact_callbacks.rs  iterate_8_suite.rs  mod.rs  utility_callbacks.rs  world_transform_suite.rs
aexlo/unsafe/: CMakeLists.txt
aexlo/unsafe/src/: lib.cc
benches/: BitonicPixelSorter.aex  Cargo.toml  README.md
benches/BitonicPixelSorter.plugin/Contents/: Info.plist
benches/BitonicPixelSorter.plugin/Contents/MacOS/: BitonicPixelSorter
benches/benches/: load.rs  render_matrix.rs
benches/src/: lib.rs
cli/: Cargo.toml
cli/src/: dev.rs  main.rs  view.rs  watch.rs  web.rs
crates/aexlo/: Cargo.toml
crates/aexlo/src/: gpu.rs  instance.rs  lib.rs  preview.rs  utils.rs
crates/aexlo/src/core/: constants.rs  error.rs  helpers.rs  mod.rs
crates/aexlo/src/host/: interact.rs  smart_render.rs  utility.rs
crates/aexlo/src/suites/: ae_app.rs  angle_param.rs  ansi.rs  color_callbacks.rs  color_param.rs  fill_matte.rs  interface.rs  iterate.rs  mod.rs  persistent_data.rs  pixel_data.rs  pixel_norm.rs  point_param.rs  transform.rs  ui.rs  world.rs
crates/bench/: README.md
crates/bench/BitonicPixelSorter.plugin/Contents/Resources/: BitonicPixelSorterPiPL.rsrc
crates/bench/BitonicPixelSorter.plugin/Contents/_CodeSignature/: CodeResources
crates/bench/benches/: summary.rs
crates/bench/src/: lib.rs  report.rs
crates/cli/: Cargo.toml
crates/cli/src/: bench.rs  main.rs  preview.rs  view.rs  viewer.rs  watch.rs  web.rs
crates/wrapper/src/: lib.rs
crates/wrapper/src/pixel/: uint16.rs  uint8.rs
demos/hello_world/: Cargo.toml  build.rs
demos/hello_world/src/: lib.rs
demos/noise/: Cargo.toml  build.rs
demos/noise/src/: lib.rs
examples/interactive/: Cargo.toml  README.md
examples/interactive/src/: main.rs  renderer.rs  shader.wgsl  ui.rs
examples/sdk_noise/: .gitignore  Cargo.toml  build.rs
examples/sdk_noise/benches/: render_full.rs
examples/sdk_noise/src/: main.rs
examples/sdk_noise/tests/mocks/windows/: SDK_Noise.aex
fixtures/plugins/: .gitignore
fixtures/plugins/windows/: SDK_Noise.aex
playground/: README.md
playground/harness/: Cargo.toml
playground/harness/src/: main.rs  pipl.rs  runtime_facts_test.rs  summary.rs
playground/probe/: Cargo.toml  build.rs
playground/probe/src/: checks.rs  inspect.rs  lib.rs  probes.rs  render.rs  trace.rs
src/: diagnostics.rs  main.rs  plugin_instance.rs
test/: SDK_Noise.aex  aviutl-circle-align.aex  nothing.aex
tests/e2e/: .gitignore  Cargo.toml  build.rs
tests/e2e/client/: CMakeLists.txt
tests/e2e/client/about_message_test/: CMakeLists.txt  about_message.cc
tests/e2e/client/pointer_validation_test/: CMakeLists.txt  main.cc
tests/e2e/src/: lib.rs
tests/e2e/tests/: gpu_render.rs  param_roundtrip.rs  pixel_validation.rs  render_matrix.rs
wrapper/: Cargo.toml
wrapper/src/: layer.rs  lib.rs
wrapper/src/pixel/: float32.rs  mod.rs  uint16.rs  uint8.rs
