[workspace]
resolver = "3"
members = ["aexlo", "aexlo-macros", "cli", "wrapper", "examples/*", "tests/e2e", "benches", "demos/*"]
default-members = ["aexlo"]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["potistudio <potistudio@proton.me>"]
license = "MIT"

[profile.release]
codegen-units = 1
lto = true

[workspace.dependencies]
aexlo = { path = "./aexlo" }
wrapper = { path = "./wrapper" }
