[workspace]
resolver = "3"
members = ["crates/*", "examples/*", "tests/e2e", "demos/*", "playground/probe", "playground/harness"]
default-members = ["crates/aexlo"]

[workspace.package]
version = "0.0.1"
edition = "2024"
authors = ["potistudio <potistudio@proton.me>"]
license = "MIT"

[profile.release]
codegen-units = 1
lto = true

[workspace.dependencies]
aexlo = { path = "crates/aexlo" }
wrapper = { path = "crates/wrapper" }
aexlo-macros = { path = "crates/aexlo-macros" }
