[package]
name = "aexlo-macros"
description = "Attribute macros for aexlo (e.g. #[aexlo::preview])."
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/potistudio/aexlo-rs"
edition = { workspace = true }

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.118", features = ["full"] }
quote = "1.0.46"
proc-macro2 = "1.0.106"
