[package]
name = "aexlo"
description = "Run After Effects plugin without Adobe dependency."
version = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = "https://github.com/potistudio/aexlo-rs"
keywords = ["after-effects", "graphics", "emulator"]
categories = ["emulator"]
readme = "README.md"
edition = { workspace = true }

[features]
all = ["diagnostics"]
diagnostics = []

[dependencies]
wrapper = { path = "../wrapper" }
aexlo-macros = { path = "../aexlo-macros" }
after-effects-sys = "0.3.0"
chrono = "0.4.42"
colored = "3.0.0"
env_logger = "0.11.8"
log = "0.4.28"
after-effects = "0.2.1"
mtpng = "0.4.1"
thiserror = "2.0"
rayon = "1.11.0"
dlopen2 = "0.8.2"
bytemuck = "1.25.0"

# Metal-backed GPU rendering is macOS-only; plugins that declare
# PF_OutFlag2_SUPPORTS_GPU_RENDER_F32 are driven through it (see `gpu` module).
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.29"
foreign-types = "0.5"
objc = "0.2"

# CUDA-backed GPU rendering on Windows/Linux. `dynamic-loading` dlopens the
# NVIDIA driver at runtime, so building never requires the CUDA toolkit; the
# `cuda-12040` pin selects a conservative driver-API binding set (R550+).
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
cudarc = { version = "0.19", default-features = false, features = ["std", "driver", "dynamic-loading", "cuda-12040"] }
