[package]
name = "aexlo"
version = { workspace = true }
edition = { workspace = true }
description = "Run After Effects plugin without Adobe dependency."
authors = { workspace = true }
license = { workspace = true }
repository = "https://github.com/potistudio/aexlo-rs"
keywords = ["after-effects", "graphics", "emulator"]
categories = ["emulator"]
readme = "README.md"

[features]
all = ["diagnostics"]
diagnostics = []

[dependencies]
aexlo-macros = { workspace = true }
after-effects = "0.4.0"
after-effects-sys = "0.4.0"
bytemuck = "1.25.1"
chrono = "0.4.45"
colored = "3.1.1"
dlopen2 = "0.8.2"
env_logger = "0.11.11"
log = "0.4.33"
mtpng = "0.4.1"
rayon = "1.12.0"
thiserror = "2.0.18"
wrapper = { workspace = true }

# Metal-backed GPU rendering is macOS-only; plugins that declare
# PF_OutFlag2_SUPPORTS_GPU_RENDER_F32 are driven through it (see `gpu` module).
[target.'cfg(target_os = "macos")'.dependencies]
metal = "0.33.0"
foreign-types = "0.5"
objc = "0.2.7"

# CUDA-backed GPU rendering on Windows/Linux. `dynamic-loading` dlopens the
# NVIDIA driver at runtime, so building never requires the CUDA toolkit; the
# `cuda-12040` pin selects a conservative driver-API binding set (R550+).
[target.'cfg(any(target_os = "windows", target_os = "linux"))'.dependencies]
cudarc = { version = "0.19.8", default-features = false, features = [
	"std",
	"driver",
	"dynamic-loading",
	"cuda-12040",
] }
