[package]
name = "aexlo-cli"
version = { workspace = true }
edition = { workspace = true }
description = "Command-line front-end for the aexlo After Effects plugin loader."
authors = { workspace = true }
license = { workspace = true }
repository = "https://github.com/potistudio/aexlo-rs"

# Installs as `aexlo` so `cargo install --path cli` gives an `aexlo` command.
[[bin]]
name = "aexlo"
path = "src/main.rs"

[dependencies]
aexlo = { workspace = true }
anyhow = "1.0.103"

# `aexlo bench`: the timing loop, plugin/resolution resolution, and reporting are
# shared with `cargo bench -p aexlo-bench` so both front-ends measure identically.
aexlo-bench = { path = "../bench" }
image = { version = "0.25.10", default-features = false, features = ["png"] }

# `aexlo dev --bin`: live preview window (minifb), source watching (notify), and
# locating the freshly built cdylib artifact (cargo_metadata).
cargo_metadata = "0.23.1"
minifb = "0.28.0"
notify = "8.2.0"

# `aexlo dev --bin --web`: serve the live preview over a tiny local HTTP server.
tiny_http = "0.12.0"
