[package]
name = "interactive"
version = "0.0.1"
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
all = []

[dependencies]
bytemuck = { version = "1.24.0", features = ["derive"] }
env_logger = "0.11.8"
imgui = "0.11.0"
imgui-wgpu = "0.24.0"
imgui-winit-support = "0.11.0"
pollster = "0.3.0"
wgpu = "0.17.2"
winit = "0.27.5"

[[bin]]
name = "demo"
path = "src/main.rs"
