[package]
name = "interactive"
version = "0.0.1"
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
all = []

[dependencies]
aexlo = { path = "../../aexlo" }
eframe = "0.33.0"
env_logger = "0.11.8"
log = "0.4.28"
rand = "0.9.2"

[[bin]]
name = "demo"
path = "src/main.rs"
