[package]
name = "interactive"
version = "0.0.1"
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
all = []

[dependencies]
aexlo = { path = "../../crates/aexlo" }
anyhow = "1.0.103"
eframe = "0.35.0"
env_logger = "0.11.11"
image = { version = "0.25.10", default-features = false, features = ["png"] }
log = "0.4.33"
rand = "0.10.2"

[[bin]]
name = "demo"
path = "src/main.rs"
