[package]
name = "sdk_noise"
authors.workspace = true
license.workspace = true
edition.workspace = true

[features]
all = ["diagnostics"]
diagnostics = ["aexlo/diagnostics"]

[[bench]]
name = "render_full"
harness = false

[dependencies]
aexlo = { path = "../../aexlo" }
chrono = "0.4.45"
colored = "3.1.1"
env_logger = "0.11.11"
image = { version = "0.25.10", default-features = false, features = ["png"] }
log = "0.4.33"
mtpng = "0.4.1"

[dev-dependencies]
criterion = "0.8.2"
