[package]
name = "aexlo-probe"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false
description = "Instrumented AE effect plugin that records host behavior to a JSONL trace."

# `cdylib` is the actual .aex payload (rename the built DLL to .aex).
# `rlib` lets the playground harness drive the same entry point in-process
# via `PluginInstance::from_entry_raw` for breakpoint-friendly debugging.
[lib]
name = "aexlo_probe"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Same version as the `aexlo` crate, so `after_effects::sys` struct layouts
# match the host exactly. The probe deliberately talks to the raw `sys` ABI —
# it measures the host, not the high-level wrapper.
after-effects = "0.4.0"
serde_json = "1.0"

[build-dependencies]
# Generates and embeds the PiPL resource (Windows: `16000 PiPL` via winres;
# macOS: .rsrc next to the target dir).
pipl = "0.1.1"
