[package]
name = "test_e2e"
version = { workspace = true }
authors = { workspace = true }
license = { workspace = true }
edition = { workspace = true }
publish = false

[dependencies]
aexlo = { workspace = true }
image = { version = "0.25.10", default-features = false, features = ["png"] }
mtpng = "0.4.1"

[build-dependencies]
cmake = "0.1.57"
